--- a/package.json
+++ b/package.json
@@ -24,5 +24,20 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "celebrate": "^15.0.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "express-winston": "^4.2.0",
+    "helmet": "^6.0.0",
+    "joi": "^17.6.2",
+    "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.1",
+    "validator": "^13.7.0",
+    "winston": "^3.8.2"
   }
 }
